# tranquilo

./: .pre-commit-config.yaml  CHANGES.md  LICENSE  MANIFEST.in  README.md  codecov.yml  environment.yml  pyproject.toml  setup.cfg
.envs/: testenv-linux.yml  testenv-others.yml
.github/workflows/: main.yml
docs/: Makefile  make.bat  rtd_environment.yml
docs/source/: conf.py  index.md
docs/source/how_to_guides/optimization/: how_to_specify_constraints.md
src/estimagic/visualization/: visualize_tranquilo.py
src/tranquilo/: __init__.py  acceptance_decision.py  adjust_n_evals.py  adjust_radius.py  adjust_radius_and_n_evals.py  aggregate_models.py  config.py  estimate_variance.py  exploration_sample.py  filter_points.py  fit_models.py  get_component.py  handle_infinity.py  history.py  options.py  process_arguments.py  region.py  rho_noise.py  robustify_subproblem_solution.py  sample_points.py  solve_subproblem.py  tranquilo.py  utilities.py  visualize.py  wrap_criterion.py
src/tranquilo/optimization/: __init__.py
src/tranquilo/subsolvers/: bntr.py  bntr_fast.py  fallback_subsolvers.py  wrapped_subsolvers.py
tests/: test_acceptance_decision.py  test_acceptance_sample_size.py  test_adjust_radius.py  test_aggregate_models.py  test_bounds.py  test_clustering.py  test_estimate_variance.py  test_exploration_sample.py  test_filter_points.py  test_fit_models.py  test_get_component.py  test_handle_infinity.py  test_history.py  test_models.py  test_options.py  test_poisedness.py  test_process_arguments.py  test_region.py  test_rho_noise.py  test_sample_points.py  test_solve_subproblem.py  test_tranquilo.py  test_utilities.py  test_visualize.py  test_volume.py  test_weighting.py  test_wrap_criterion.py
tests/optimization/: test_quadratic_subsolvers.py  test_with_nonlinear_constraints.py
tests/subsolvers/: test_bntr_fast.py  test_fallback_solvers.py  test_gqtpar_fast.py  test_gqtpar_lambdas.py  test_minimize_trust_region.py
