[metadata]
name = tranquilo
description = Trust-region optimizer for scalar, least-square and noisy problems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OpenSourceEconomics/tranquilo
author = Janos Gabler
author_email = janos.gabler@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
keywords =
    optimization
    dfo
    derivative free optimization
    noisy optimization
    parallel optimization
    numerical optimization

[options]
packages = find:
install_requires =
    numba
    numpy>=1.17.0
    pandas
    scipy>=1.2.1
    estimagic>=0.4.2
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[check-manifest]
ignore =
    src/tranquilo/_version.py
